src/objects/Project__c.object
<CustomObject>
    <description>A Dimagi Project</description>
    <fields>
        <fullName>Area_Text__c</fullName>
        <inlineHelpText>For reporting on the multi-select area field.</inlineHelpText>
        <label>Area</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Area__c</fullName>
        <label>Area</label>
        <picklist>
            <picklistValues>
                <fullName>Health</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Poverty and Economic Development</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Natural Resource Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Training &amp; Education Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Logistics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Backstop__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Which Dimagi resource is supporting the project.</inlineHelpText>
        <label>Backstop</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Projects_backstop</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Billable_Travel__c</fullName>
        <label>Billable Travel</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Implementing Country</label>
        <referenceTo>Country__c</referenceTo>
        <relationshipName>Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Funder_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Who is supplying the funding</inlineHelpText>
        <label>Funding Source</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Funding_Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Implementing_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The organization that is implementing the project.</inlineHelpText>
        <label>Implementing Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Implementing_Business_Unit__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Which Dimagi Business Unit is running the project</inlineHelpText>
        <label>Implementing Business Unit</label>
        <referenceTo>Business_Unit__c</referenceTo>
        <relationshipName>Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>License_Edition__c</fullName>
        <label>License Edition</label>
        <picklist>
            <picklistValues>
                <fullName>Community</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Standard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Plus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Advanced</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Enterprise</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Product_Text__c</fullName>
        <inlineHelpText>A text display of the attached products.</inlineHelpText>
        <label>Products</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Project_Active_Date__c</fullName>
        <description>The date the project was deemed &quot;active&quot;</description>
        <label>Project Active Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Project_Dropbox_Location__c</fullName>
        <inlineHelpText>This should be in Dimagi - Projects</inlineHelpText>
        <label>Project Dropbox Location</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Project_End_Date__c</fullName>
        <inlineHelpText>The date the project ended</inlineHelpText>
        <label>Project End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Project_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Who is running the project from Dimagi.</inlineHelpText>
        <label>Project Manager</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project_Space_Name__c</fullName>
        <inlineHelpText>The name of the Project Space in HQ</inlineHelpText>
        <label>HQ Project Space Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Project_Team__c</fullName>
        <inlineHelpText>Who else is on the project team?</inlineHelpText>
        <label>Project Team</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Project_Type__c</fullName>
        <inlineHelpText>Most projects should be Implementation unless they are exclusively Consulting or Software Dev.</inlineHelpText>
        <label>Project Type</label>
        <picklist>
            <picklistValues>
                <fullName>Implementation</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Consulting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Core Software Development</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Proposal_Dropbox_Location__c</fullName>
        <inlineHelpText>This should be in Dimagi - Proposals</inlineHelpText>
        <label>Proposal Dropbox Location</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Short_Description__c</fullName>
        <inlineHelpText>A short description of the project.</inlineHelpText>
        <label>Short Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <inlineHelpText>&quot;Inactive&quot; means either not started or on hold. &quot;Complete&quot; means the project is closed.</inlineHelpText>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Active</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Complete</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inactive</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Sub_Area_Text__c</fullName>
        <description>Populated by trigger.  For use on display in the related lists since it is a multiselect.</description>
        <inlineHelpText>For use on display in the related lists since it is a multiselect.</inlineHelpText>
        <label>Sub Area</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Sub_Area__c</fullName>
        <label>Sub Area</label>
        <picklist>
            <picklistValues>
                <fullName>*** Health ***</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maternal, Newborn, &amp; Child Health</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Family Planning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HIV/AIDS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Malaria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Respiratory Diseases</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tuberculosis</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Polio</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vaccinations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Diarrhea</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Primary Care</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non-Communicable Diseases</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mental Health</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nutrition</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>*** Poverty and Economic Development ***</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gender Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Water, Sanitation, &amp; Hygiene</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Financial Services to the Poor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Urban Development</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>*** Natural Resource Management ***</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Agriculture</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Food Security</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Environment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>*** Training &amp; Education Services ***</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Adult Training</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Child Education</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Early Childhood Development</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>*** Logistics ***</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Human Resources</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commodity Tracking/Procurement</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <label>Deployment</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Project_Manager__c</columns>
        <columns>Area__c</columns>
        <columns>Sub_Area__c</columns>
        <columns>Status__c</columns>
        <columns>Project_Active_Date__c</columns>
        <columns>Project_End_Date__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All_Active</fullName>
        <columns>NAME</columns>
        <columns>Area__c</columns>
        <columns>Sub_Area__c</columns>
        <columns>Project_Manager__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filters>
        <label>All Active</label>
    </listViews>
    <listViews>
        <fullName>All_Projects</fullName>
        <columns>NAME</columns>
        <columns>Area__c</columns>
        <columns>Sub_Area__c</columns>
        <columns>Project_Manager__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Projects</label>
    </listViews>
    <nameField>
        <label>Deployment Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Deployments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>